--- a/MaintenanceWebService/.settings/org.eclipse.wst.common.component
+++ b/MaintenanceWebService/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/java.src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/Rest/build/classes"/>
-        <property name="context-root" value="Rest"/>
+        <property name="context-root" value="MaintenanceWebService"/>
     </wb-module>
 </project-modules>
