--- a/MaintenanceWebService/.settings/org.eclipse.wst.common.component
+++ b/MaintenanceWebService/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/java.resource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/java.src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="Common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Common/Common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/Rest/build/classes"/>
         <property name="context-root" value="MaintenanceWebService"/>
     </wb-module>
