--- a/MaintenanceWebService/.settings/org.eclipse.wst.common.component
+++ b/MaintenanceWebService/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Rest">
+    <wb-module deploy-name="MaintenanceWebService">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/java.test"/>
@@ -9,7 +9,7 @@
         <dependent-module archiveName="Common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Common/Common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="java-output-path" value="/Rest/build/classes"/>
+        <property name="java-output-path" value="/MaintenanceWebService/build/classes"/>
         <property name="context-root" value="MaintenanceWebService"/>
     </wb-module>
 </project-modules>
