--- a/MaintenanceWebService/.settings/org.eclipse.wst.common.component
+++ b/MaintenanceWebService/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="Common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Common/Common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="commonEmail-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/commonEmail/commonEmail">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/MaintenanceWebService/target/classes"/>
         <property name="context-root" value="MaintenanceWebService"/>
     </wb-module>
