--- a/Android/Maintenance/app/src/main/res/layout/client_asset_register.xml
+++ b/Android/Maintenance/app/src/main/res/layout/client_asset_register.xml
@@ -14,6 +14,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.ClientAssetRegister">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/client_asset_registration"
+        android:id="@+id/login_header_txt"
+        android:layout_below="@+id/hidden_client_id"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,10 +52,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/make_id"
         android:id="@+id/Make_id"
+        android:layout_marginTop="22dp"
         android:textStyle="bold"
         android:layout_below="@+id/asset_type"
-        android:layout_alignStart="@+id/asset_type"
-        android:layout_marginTop="22dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,10 +74,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/asset_no"
         android:id="@+id/asset_no"
+        android:layout_marginTop="22dp"
         android:textStyle="bold"
         android:layout_below="@+id/model_id"
-        android:layout_alignStart="@+id/model_id"
-        android:layout_marginTop="22dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -86,10 +96,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/mfg_sl_no"
         android:id="@+id/mfg_sf_no"
+        android:layout_marginTop="22dp"
         android:textStyle="bold"
         android:layout_below="@+id/asset_desc"
-        android:layout_alignStart="@+id/asset_desc"
-        android:layout_marginTop="22dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,10 +107,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/inst_sl_no"
         android:textStyle="bold"
+        android:layout_marginTop="22dp"
         android:id="@+id/inst_sl_no"
         android:layout_below="@+id/mfg_sf_no"
-        android:layout_alignStart="@+id/mfg_sf_no"
-        android:layout_marginTop="22dp" />
+        android:layout_alignStart="@+id/mfg_sf_no" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -120,8 +130,98 @@
         android:text="@string/date_install"
         android:id="@+id/date_install"
         android:textStyle="bold"
-        android:layout_alignBottom="@+id/datePicker_date_install"
-        android:layout_alignStart="@+id/date_mfg" />
+        android:layout_below="@+id/date_mfg"
+        android:layout_alignStart="@+id/date_mfg"
+        android:layout_marginTop="22dp"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/asset_usage"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Asset Usage (Hours)"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/date_install"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/location"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Location"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/asset_usage"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/purchase_cost"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Purchase Cost"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/location"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/warrenty"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="In Warranty or AMC"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/purchase_cost"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Warranty Start Date"
+        android:id="@+id/amc_start_date"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/warrenty"
+        android:layout_alignStart="@+id/inst_sl_no" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Warranty End Date"
+        android:id="@+id/amc_end_data"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/amc_start_date"
+        android:layout_alignStart="@+id/amc_start_date" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Active"
+        android:id="@+id/active_textview"
+        android:textStyle="bold"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/amc_end_data"
+        android:layout_alignStart="@+id/amc_end_data" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Status"
+        android:id="@+id/status"
+        android:layout_marginTop="22dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/active_textview"
+        android:layout_alignStart="@+id/active_textview" />
 
     <EditText
         android:layout_width="0dp"
@@ -139,7 +239,7 @@
         android:id="@+id/datePicker_date_install"
         android:layout_below="@+id/date_mfg"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/asset_desc" />
+        android:layout_toEndOf="@+id/date_mfg" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -149,7 +249,8 @@
         android:id="@+id/editText_asset_desc"
         android:layout_above="@+id/mfg_sf_no"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/asset_desc" />
+        android:layout_toEndOf="@+id/asset_desc"
+        android:layout_alignStart="@+id/datePicker_date_mfg" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -159,7 +260,8 @@
         android:layout_alignBottom="@+id/inst_sl_no"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/asset_desc"
-        android:id="@+id/editText_inst_sl_no" />
+        android:id="@+id/editText_inst_sl_no"
+        android:layout_alignStart="@+id/datePicker_date_mfg" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -197,8 +299,9 @@
         android:ems="10"
         android:id="@+id/editText_mfg_sl_no"
         android:layout_above="@+id/inst_sl_no"
-        android:layout_alignStart="@+id/editText_asset_desc"
-        android:layout_alignEnd="@+id/editText_asset_desc" />
+        android:layout_alignEnd="@+id/editText_asset_desc"
+        android:layout_toEndOf="@+id/mfg_sf_no"
+        android:layout_alignStart="@+id/editText_asset_desc" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -224,6 +327,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/Make_id"
+        android:textAlignment="center"
         android:layout_alignStart="@+id/spinner_client_id" />
 
     <Spinner
@@ -231,6 +335,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/model_id"
+        android:textAlignment="center"
         android:layout_alignStart="@+id/spinner_asset_type" />
 
     <Spinner
@@ -238,7 +343,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/asset_no"
+        android:textAlignment="center"
         android:layout_alignStart="@+id/spinner_make_id" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -247,19 +354,106 @@
         android:id="@+id/registerbtn"
         android:background="#3F51B5"
         android:layout_marginTop="37dp"
-        android:layout_below="@+id/datePicker_date_install"
-        android:layout_alignStart="@+id/date_install"
+        android:layout_below="@+id/status"
+        android:layout_alignStart="@+id/status"
         android:layout_alignEnd="@+id/datePicker_date_install" />
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/client_asset_registration"
-        android:id="@+id/login_header_txt"
-        android:layout_below="@+id/hidden_client_id"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/client_asset_location"
+        android:layout_above="@+id/purchase_cost"
+        android:layout_alignEnd="@+id/datePicker_date_install"
+        android:layout_toEndOf="@+id/asset_usage" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/editText3"
+        android:layout_below="@+id/client_asset_location"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/client_asset_location" />
 
 
-</RelativeLayout>
+
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="90dp"
+        android:id="@+id/warrenty_radio_grp"
+        android:layout_below="@+id/purchase_cost"
+        android:layout_toEndOf="@+id/inst_sl_no"
+        android:layout_alignStart="@+id/client_asset_location"
+        android:layout_above="@+id/amc_start_date"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <RadioButton android:id="@+id/radio_yes"
+            android:layout_width="41dp"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:text="Yes"
+            android:layout_weight="0.68" />
+        <RadioButton android:id="@+id/radio_no"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:text="No"
+            android:layout_weight="0.39" />
+    </RadioGroup>
+
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/asset_usege"
+        android:layout_alignBottom="@+id/asset_usage"
+        android:layout_alignEnd="@+id/datePicker_date_install"
+        android:layout_alignStart="@+id/client_asset_location" />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:id="@+id/datePicker_warrenty_start"
+        android:layout_above="@+id/datePickerr_warrenty_end"
+        android:layout_alignEnd="@+id/warrenty_radio_grp"
+        android:layout_alignStart="@+id/datePickerr_warrenty_end" />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:id="@+id/datePickerr_warrenty_end"
+        android:layout_above="@+id/active_textview"
+        android:layout_alignEnd="@+id/registerbtn"
+        android:layout_alignStart="@+id/warrenty_radio_grp" />
+
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="90dp"
+        android:id="@+id/active_radio_grp"
+        android:layout_toEndOf="@+id/inst_sl_no"
+        android:layout_alignStart="@+id/client_asset_location"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_below="@+id/amc_end_data"
+        android:layout_alignBottom="@+id/active_textview">
+        <RadioButton android:id="@+id/active_radio_yes"
+            android:layout_width="41dp"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:text="Yes"
+            android:layout_weight="0.59" />
+        <RadioButton android:id="@+id/active_radio_no"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:text="No"
+            android:layout_weight="0.39" />
+    </RadioGroup>
+
+
+ </RelativeLayout>
 </ScrollView>
