--- a/Android/Maintenance/app/src/main/res/layout/login.xml
+++ b/Android/Maintenance/app/src/main/res/layout/login.xml
@@ -6,21 +6,23 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="10dip"
         android:text="@string/sign_in"
-        android:textSize="25sp"
+        android:textSize="35dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:id="@+id/login_header_txt" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/email"
-        android:hint="Email"
+        android:hint="User Name"
         android:layout_below="@+id/login_header_txt"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         android:layout_alignEnd="@+id/password"
         android:layout_alignStart="@+id/password" />
 
@@ -28,12 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/password"
         android:hint="Password"
         android:layout_below="@+id/email"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:id="@+id/login_error"
@@ -41,35 +43,51 @@
         android:layout_height="wrap_content"
         android:padding="10dip"
         android:textColor="#e30000"
+        android:textAlignment="center"
         android:textStyle="bold"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/password"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="@color/colorPrimary"
         android:onClick="loginUser"
         android:text="@string/login"
         android:textColor="#fff"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_below="@+id/login_error"
         android:layout_alignEnd="@+id/password"
         android:layout_alignStart="@+id/password" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:textAlignment="center"
+        android:layout_alignStart="@+id/btnLogin"
+        android:layout_alignEnd="@+id/btnLogin"
+        android:layout_below="@+id/btnLogin"
+        android:clickable="true"
+        android:text="@string/forgot_your_password"
+        android:id="@+id/forgotpassword" />
+
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:background="#3F51B5"
+        android:background="@color/colorPrimary"
         android:text="@string/signup"
+        android:textSize="20dp"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:layout_below="@+id/btnLogin"
-        android:layout_alignEnd="@+id/btnLogin"
-        android:layout_alignStart="@+id/btnLogin" />
+        android:layout_below="@+id/forgotpassword"
+        android:layout_marginTop="25dp"
+        android:layout_alignStart="@+id/forgotpassword"
+        android:layout_alignEnd="@+id/forgotpassword" />
+
 
 </RelativeLayout>
