--- a/Android/Maintenance/app/src/main/res/layout/register.xml
+++ b/Android/Maintenance/app/src/main/res/layout/register.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/user_name"
         android:hint="User Name"
         android:layout_below="@+id/register_header_txt"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/clientname"
         android:hint="Client Name"
         android:layout_below="@+id/user_name"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/client_email"
         android:hint="Email"
         android:layout_below="@+id/clientname"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="15"
+        android:ems="10"
         android:id="@+id/password"
         android:hint="Password"
         android:layout_below="@+id/client_email"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:ems="15"
+        android:ems="10"
         android:hint="Phone number"
         android:id="@+id/client_phone"
         android:layout_below="@+id/password"
@@ -74,11 +74,11 @@
         android:id="@+id/btnSignup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         android:text="@string/signup"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:background="#3F51B5"
+        android:background="@color/colorPrimary"
         android:layout_below="@+id/client_phone"
         android:layout_alignStart="@+id/client_phone"
         android:layout_alignEnd="@+id/client_phone" />
