--- a/Android/Maintenance/app/src/main/res/layout/login.xml
+++ b/Android/Maintenance/app/src/main/res/layout/login.xml
@@ -11,6 +11,7 @@
         android:text="@string/sign_in"
         android:textSize="35dp"
         android:textStyle="bold"
+        android:textColor="@color/black_color"
         android:textAlignment="center"
         android:id="@+id/login_header_txt" />
 
@@ -42,7 +43,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="10dip"
-        android:textColor="#e30000"
+        android:textColor="@color/red_color"
         android:textAlignment="center"
         android:textStyle="bold"
         android:layout_alignParentEnd="true"
@@ -56,24 +57,13 @@
         android:background="@color/colorPrimary"
         android:onClick="loginUser"
         android:text="@string/login"
-        android:textColor="#fff"
+        android:textColor="@color/white_color"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_below="@+id/login_error"
         android:layout_alignEnd="@+id/password"
         android:layout_alignStart="@+id/password" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:textAlignment="center"
-        android:layout_alignStart="@+id/btnLogin"
-        android:layout_alignEnd="@+id/btnLogin"
-        android:layout_below="@+id/btnLogin"
-        android:clickable="true"
-        android:text="@string/forgot_your_password"
-        android:id="@+id/forgotpassword" />
 
     <Button
         android:id="@+id/btnRegister"
@@ -82,12 +72,23 @@
         android:background="@color/colorPrimary"
         android:text="@string/signup"
         android:textSize="20dp"
-        android:textColor="#fff"
+        android:textColor="@color/white_color"
         android:textStyle="bold"
-        android:layout_below="@+id/forgotpassword"
+        android:layout_below="@+id/btnLogin"
         android:layout_marginTop="25dp"
         android:layout_alignStart="@+id/forgotpassword"
         android:layout_alignEnd="@+id/forgotpassword" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:textAlignment="center"
+        android:layout_alignStart="@+id/btnLogin"
+        android:layout_alignEnd="@+id/btnLogin"
+        android:layout_below="@+id/btnRegister"
+        android:clickable="true"
+        android:text="@string/forgot_your_password"
+        android:id="@+id/forgotpassword" />
 
 </RelativeLayout>
