--- a/Android/Maintenance/app/src/main/res/layout/user_approval.xml
+++ b/Android/Maintenance/app/src/main/res/layout/user_approval.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/row_selecter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,10 +20,15 @@
         android:padding="15dp"/>
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/listView_users"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header"
-        android:choiceMode="multipleChoice"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:dividerHeight="10dp"
+        android:choiceMode="multipleChoice" />
 
 </RelativeLayout>
